force-app/main/default/objects/ilms__Speciality__c/ilms__Speciality__c.object-meta.xml
<CustomObject>
    <label>Speciality (Deprecated)</label>
    <nameField>
        <displayFormat>S{00000}</displayFormat>
        <label>Speciality Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Speciality (Deprecated)</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>