force-app/main/default/objects/ilms__Speciality__c/fields/ilms__Books__c.field-meta.xml
<CustomField>
    <fullName>ilms__Books__c</fullName>
    <description>Books that belongs to this Speciality</description>
    <label>Books</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>