force-app/main/default/objects/ilms__Speciality__c/fields/ilms__Certification_Image__c.field-meta.xml
<CustomField>
    <fullName>ilms__Certification_Image__c</fullName>
    <formula>IMAGE(&quot;/servlet/servlet.FileDownload?file=&quot;+ ilms__Speciality_Badge_Image__c  ,&quot;Icon&quot;,50,50)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Certification Image</label>
    <type>Text</type>
</CustomField>