force-app/main/default/objects/ilms__Speciality__c/fields/ilms__Color__c.field-meta.xml
<CustomField>
    <fullName>ilms__Color__c</fullName>
    <label>Color</label>
    <length>10</length>
    <type>Text</type>
</CustomField>