force-app/main/default/objects/ilms__Speciality__c/fields/ilms__Speciality_Badge_Image__c.field-meta.xml
<CustomField>
    <fullName>ilms__Speciality_Badge_Image__c</fullName>
    <label>Badge</label>
    <type>Url</type>
</CustomField>