force-app/main/default/objects/ilms__Speciality__c/fields/ilms__Speciality_Badge_Name__c.field-meta.xml
<CustomField>
    <fullName>ilms__Speciality_Badge_Name__c</fullName>
    <label>Speciality Badge</label>
    <length>255</length>
    <type>Text</type>
</CustomField>